--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,16 +1,31 @@
-// http://ionicframework.com/docs/theming/
+@font-face {
+    font-family: 'GothamRoundedBold';
+    font-weight: 300;
+    font-style: normal;
+    src: url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold-300.eot');
+    src: url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.eot?#iefix') format('embedded-opentype'),
+    local('Gotham Rounded Bold'),
+    local('GothamRoundedBold'),
+    url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.woff2') format('woff2'),
+    url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.woff') format('woff'),
+    url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.ttf') format('truetype'),
+    url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.svg#Lato') format('svg');
+}
 
+@font-face {
+    font-family: 'GothamRoundedBook';
+    font-weight: 300;
+    font-style: normal;
+    src: url('../assets/fonts/GothamRounded-Book/GothamRounded-Book-300.eot');
+    src: url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.eot?#iefix') format('embedded-opentype'),
+    local('Gotham Rounded Book'),
+    local('GothamRoundedBook'),
+    url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.woff2') format('woff2'),
+    url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.woff') format('woff'),
+    url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.ttf') format('truetype'),
+    url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.svg#Lato') format('svg');
+}
 
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
+:root{
+    --main-backroung-color: #2C363F;
+}
