--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,8 +34,8 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #2C363F,
+  secondary:  #E75A7C,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
@@ -46,14 +46,14 @@ $colors: (
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-
+$label-ios-text-color-focused: #fff;
 
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-
+$label-md-text-color-focused: #fff;
 
 
 // App Windows Variables
@@ -86,3 +86,8 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+
+$font-family-md-base: "GothamRoundedBook";
+$font-family-ios-base: "GothamRoundedBook";
+$font-family-wp-base: "GothamRoundedBook";
