--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -6,7 +6,7 @@
     src: url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.eot?#iefix') format('embedded-opentype'),
     local('Gotham Rounded Bold'),
     local('GothamRoundedBold'),
-    url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.woff2') format('woff2'),
+    // url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.woff2') format('woff2'),
     url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.woff') format('woff'),
     url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.ttf') format('truetype'),
     url('../assets/fonts/GothamRounded-Bold/GothamRounded-Bold.svg#Lato') format('svg');
@@ -20,7 +20,7 @@
     src: url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.eot?#iefix') format('embedded-opentype'),
     local('Gotham Rounded Book'),
     local('GothamRoundedBook'),
-    url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.woff2') format('woff2'),
+    // url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.woff2') format('woff2'),
     url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.woff') format('woff'),
     url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.ttf') format('truetype'),
     url('../assets/fonts/GothamRounded-Book/GothamRounded-Book.svg#Lato') format('svg');
@@ -28,4 +28,8 @@
 
 :root{
     --main-backroung-color: #2C363F;
+}
+
+body{
+    background-color: map-get($colors, primary) !important;
 }
