--- a/src/pages/lista/lista.scss
+++ b/src/pages/lista/lista.scss
@@ -42,6 +42,10 @@ page-lista {
         }
     }
 
+    th.precio{
+        color: #00d0ff;
+    }
+
     /** Bootstrap TABLE */
     .table-dark {
         color: #fff;
